<resources>
    <string name="app_name">Lion Fleet</string>
    <string name="rationale_location">This app needs access to your location to know where you are.</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibGV3aXNjY3giLCJhIjoiY2s3ZzI1YnI2MDAxNjNlb2IxZHk0bzQ4cyJ9.KGCWmEWvYHnBfKec11rf3g</string>
    <string name="alan_access_token">cb13a0a22f6c3251f93f97723d75f9a82e956eca572e1d8b807a3e2338fdd0dc/stage</string>
    <string name="msg_click_to_show_route">Click anywhere on the map to show route</string>
    <string-array name="filter_options">
        <item>All</item>
        <item>Cancelled</item>
        <item>Completed</item>
        <item>Overdue</item>

    </string-array>
    <string name="sign_up_header">Sign up</string>
    <string name="sign_up_hint_email">EMAIL</string>
    <string name="sign_up_hint_first_name">FIRST NAME</string>
    <string name="sign_up_hint_last_name">LAST NAME</string>
    <string name="sign_up_hint_country_code">COUNTRY CODE</string>
    <string name="sign_up_hint_phone_number">PHONE NUMBER</string>
    <string name="sign_up_hint_password">PASSWORD</string>
    <string name="sign_up_text_password_regulation_not_fulfilled">Password regulation not fulfilled.</string>
    <string name="sign_up_text_password_a_minimum_length_8_characters">a minimum length of 8 characters</string>
    <string name="sign_up_text_password_at_least_1_number">at least one number</string>
    <string name="sign_up_text_password_at_least_1_uppercase_letter">at least one uppercase letter</string>
    <string name="sign_up_text_password_at_least_1_lowercase_letter">at least one lowercase letter</string>
    <string name="sign_up_text_password_at_least_1_special_character_like">at least one special character \ne.g. (\^$*.[\]{}()?\-"!@#%&amp;\/\,&gt;&lt;‘:;|_~)</string>
    <string name="sign_up_text_password_confirm">CONFIRM PASSWORD</string>
    <string name="sign_up_text_password_confirm_does_not_match_password_previously">Doesn\'t match the password before</string>
    <string name="sign_up_text_registration_successful">Registration Successful!</string>
    <string name="sign_up_text_registration_successful_1">We will send a link to your inbox to \nverify your email address</string>
    <string name="sign_up_text_registration_successful_2">Please log in after clicking the link in \nthe email.</string>
    <string name="sign_up_text_driver_license_note">Please also note that your driver’s licence has to be
        \nverified at an authorized office in order to activate \nyour account. You are not able to book a vehicle if your account is inactive.
        \n\nFor more information log in first \nand go to your profile.\n\nThank you!</string>
    <string name="sign_up_text_go_back_to_login">Go back to login</string>
    <string name="sign_up_text_street">STREET</string>
    <string name="sign_up_text_number">NUMBER</string>
    <string name="sign_up_text_postal_code">POSTAL CODE</string>
    <string name="sign_up_text_city">CITY</string>
    <string name="sign_up_text_confirm">Confirm</string>
    <string name="sign_up_text_next">Next</string>
    <string name="sign_up_check_icon_content_desc">check icon content description</string>
    <string name="sign_up_cancel_icon_content_desc">cancel icon content description</string>
    <string name="sign_up_both_password_not_identical">Doesn’t match the password before</string>
    <string name="sign_up_email_invalid">The format of your email address seems incorrect.</string>
    <string name="sign_up_password_invalid">Password regulation not fulfilled</string>
    <string name="sign_up_intent_password">password</string>
    <string name="sign_up_invalid_first_name">Invalid first name</string>
    <string name="sign_up_invalid_last_name">Invalid last name</string>
    <string name="sign_up_invalid_country_code">Invalid country code</string>
    <string name="sign_up_invalid_phone_number">Invalid phone number</string>
    <string name="sign_up_term_of_use_and_privacy_policy">By confirming I agree to the Terms of Use and Privacy Policy</string>
    <string name="sign_up_term_of_use_text">Terms of Use</string>
    <string name="sign_up_privacy_policy_text">Privacy Policy</string>
    <string name="log_in_text">Log in to Lion Fleet</string>
    <string name="log_in_hint_email">EMAIL</string>
    <string name="log_in_hint_password">PASSWORD</string>
    <string name="log_in_text_button">Log in</string>
    <string name="log_in_text_forgot_password">Forgot password?</string>
    <string name="log_in_text_sign_up">Sign up</string>
    <string name="log_in_text_continue_as_guest">Continue as Guest</string>
    <string name="log_in_email_unknown">Email address is not known. Please register first.</string>
    <string name="log_in_email_unverified">Email address is not verified yet. Please check your inbox.</string>
    <string name="log_in_email_invalid">The format of your email address seems incorrect.</string>
    <string name="log_in_text_change_password">Change password</string>
    <string name="log_in_text_password_a_minimum_length_8_characters">a minimum length of 8 characters</string>
    <string name="log_in_text_password_at_least_1_number">at least one number</string>
    <string name="log_in_text_password_at_least_1_uppercase_letter">at least one uppercase letter</string>
    <string name="log_in_text_password_at_least_1_lowercase_letter">at least one lowercase letter</string>
    <string name="log_in_text_password_at_least_1_special_character_like">at least one special character like:\n(\^$*.[\]{}()?\-"!@#%&amp;\/\,&gt;&lt;‘:;|_~)</string>
    <string name="log_in_text_request_new_password">Request new password</string>
    <string name="log_in_text_request_new_password_1">We will send you a temporary password.\n
        Please change this password after you log in</string>
    <string name="log_in_text_next">Next</string>
    <string name="log_in_text_send_mail_button">Send email</string>
    <string name="log_in_text_new_password">NEW PASSWORD</string>
    <string name="log_in_text_confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="log_in_text_confirm">Confirm</string>
    <string name="service_not_available">Location services currently not available</string>
    <string name="log_in_incorrect_cred">Credentials are wrong. Please try again.</string>
    <string name="log_in_email_invalid_error">Email must not be empty… please check your input</string>
    <string name="log_in_invalid_password">Password must not be empty… please check your input</string>
    <string name="log_in_email_invalid_format_error">The format of your email address seems incorrect</string>
    <string name="log_in_email_unknown_user_error">User does not exist</string>
    <string name="log_in_unverified_user_error">User is not confirmed</string>
    <string name="log_in_incorrect_credentials_error">Incorrect username or password</string>
    <string name="sign_out_text">Sign out</string>
    <string name="forgot_password_header">Request new password</string>
    <string name="forgot_password_header_1">A temporary password will be sent to your \nemail. You will need to change the password \nafter your next login.</string>
    <string name="forgot_password_hint">EMAIL</string>
    <string name="forgot_password_text_btn">Send email</string>
    <string name="forgot_password_verification_code_header">Enter verification code</string>
    <string name="forgot_password_verification_code_hint">VERIFICATION CODE</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_map">Map</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="unexpected_error">Unexpected error. Please try again</string>
    <string name="something_went_wrong_error">Something went wrong. Please check your input and try again</string>
    <string name="toolbar_action_info">Info</string>
    <string name="toolbar_action_close">Close</string>
    <string name="toolbar_subtitle">Distance: %1$s km</string>
    <string name="title_available_vehicles">Available cars</string>
    <string name="title_rented_vehicles">Currently rented cars</string>
    <string name="title_rented">Currently rented</string>
    <string name="info_window_no_vehicles">All cars are currently rented</string>
    <string name="info_window_vehicles_available">%1$d/%2$d cars available</string>
    <string name="title_filter">Select time frame and range</string>
    <string name="title_filter_toolbar">Select time frame and range</string>
    <string name="title_vehicle_toolbar">Car detail</string>
    <string name="vehicle_reservation_loading">Requesting vehicle reservations…</string>
    <string name="start_date_hint">Start date</string>
    <string name="start_date_picker_title">Start Date</string>
    <string name="start_time_picker_title">Start Time</string>
    <string name="start_time_hint">Start time</string>
    <string name="end_date_hint">End date</string>
    <string name="end_time_hint">End time</string>
    <string name="estimated_range_hint">Estimated range - km</string>
    <string name="confirm_button">Confirm time frame and range</string>
    <string name="book_now">Book now</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="formatted_selected_time_fame">%1$s, %2$s - %3$s</string>
    <string name="formatted_date_and_time">%1$s, %2$s</string>
    <string name="formatted_selected_time_fame_full">%1$s, %2$s - \n%3$s, %4$s</string>
    <string name="formatted_filter_string">%1$s, %2$s - %3$s, %4$dkm</string>
    <string name="formatted_filter_string_full">%1$s, %2$s - \n%3$s, %4$s, %5$dkm</string>
    <string name="estimated_range_km">%1$s km</string>
    <string name="price_per_km">%1.2f €/km</string>
    <string name="select_different_time_range">Please select a different time and range!</string>
    <string name="start_trip">Start Trip</string>
    <string name="confirm_booking">Confirm your booking</string>
    <string name="confirm_booking_subtitle">Confirmed bookings will be listed in \"Bookings\"</string>
    <string name="confirm_booking_start_date_time">Checked In date and time</string>
    <string name="reserved_booking_start_date_time">Reserved start date and time</string>
    <string name="confirm_booking_end_date_time">Checked Out date and time</string>
    <string name="selected_time_frame">Selected time frame</string>
    <string name="selected_duration">Selected Duration</string>
    <string name="estimated_range">Estimated Range</string>
    <plurals name="results">
        <item quantity="one">%1$d result found</item>
        <item quantity="other">%1$d results found</item>
    </plurals>
    <string name="invalid_start_booking">Start of booking seems incorrect. Please check again.</string>
    <string name="invalid_end_booking">End of Booking seems incorrect. Please check again.</string>
    <string name="welcome_message">Welcome to Cityfleet.</string>
    <string name="lock_txt">Lock</string>
    <string name="unlock_txt">Unlock</string>
    <string name="car_unlock_txt">Car is unlocked</string>
    <string name="car_key_title_txt">Car Key</string>
    <string name="car_key_subtitle_txt">This works as normal key</string>
    <string name="checklist_windows_closed">Windows are all closed</string>
    <string name="checklist_car_locked">The car is locked</string>
    <string name="checklist_fuel_card">The fuel card is on its place</string>
    <string name="checklist_charger_plugged">The station charger is plugged in</string>
    <string name="checklist_parked_at_station">Parked at the car’s home station</string>
    <string name="checklist_hardware_key">Hardware key is on its place.</string>
    <string name="checklist_took_belonging">You took all your belongings.</string>
</resources>