<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textMin8Char"
        style="?textItalic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_password_a_minimum_length_8_characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMin1Number"
        style="?textItalic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_password_at_least_1_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMin8Char" />

    <TextView
        android:id="@+id/textMin1Uppercase"
        style="?textItalic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_password_at_least_1_uppercase_letter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMin1Number" />

    <TextView
        android:id="@+id/textMin1Lowercase"
        style="?textItalic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_password_at_least_1_lowercase_letter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMin1Uppercase" />

    <TextView
        android:id="@+id/textMin1SpecialChar"
        style="?textItalic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="9dp"
        android:text="@string/sign_up_text_password_at_least_1_special_character_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMin1Lowercase" />

</androidx.constraintlayout.widget.ConstraintLayout>
