<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@style/Theme.Material_Light">

    <TextView
        android:id="@+id/textRequestNewPassword"
        style="?header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_header_vertical_margin"
        android:gravity="start|center"
        android:text="@string/log_in_text_request_new_password"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textRequestNewPasswordHeader1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRequestNewPasswordHeader1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgot_password_vertical_margin"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start|center"
        android:text="@string/forgot_password_header_1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/forgot_password_sub_header_size"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRequestNewPassword" />

    <!-- body -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_header_vertical_margin"
        android:paddingStart="-4dp"
        android:paddingEnd="0dp"
        android:theme="@style/Theme.Material_Light"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRequestNewPasswordHeader1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            style="?editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_hint_email"
            android:inputType="textEmailAddress"
            android:textAllCaps="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- end of body -->

    <!-- footer -->
    <Button
        android:id="@+id/btnSendMail"
        style="?button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
