<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keyView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/default_margin_horizontal">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:clickable="true"
        android:contentDescription="@null"
        android:padding="6dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/AndroidTitleBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/car_key_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClose"
        tools:text="Car Key" />

    <TextView
        android:id="@+id/subTitle"
        style="@style/AndroidItalicMediumLightLowprio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/car_key_subtitle_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="This works as normal key" />

    <TextView
        android:id="@+id/txtKeyMessage"
        style="@style/AndroidButtonLabelBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_unlock_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Car is unlocked" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="@dimen/default_progress_bar_size"
        android:layout_height="@dimen/default_progress_bar_size"
        android:indeterminateTint="@color/secondary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unlockTitle"
        style="@style/AndroidTabLabelLightLowprio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/key_label_margin_vertical"
        android:text="@string/unlock_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnUnlock"
        app:layout_constraintStart_toStartOf="@+id/btnUnlock"
        tools:text="Unlock" />

    <TextView
        android:id="@+id/lockTitle"
        style="@style/AndroidTabLabelLightLowprio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/key_label_margin_vertical"
        android:text="@string/lock_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLock"
        app:layout_constraintStart_toStartOf="@+id/btnLock"
        tools:text="Lock" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/key_margin_horizontal"
        android:layout_marginBottom="@dimen/key_margin_vertical"
        android:src="@drawable/ic_unlock_icon"
        app:backgroundTint="@color/car_key_button"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/unlock_button_size"
        app:layout_constraintBottom_toTopOf="@+id/unlockTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/secondary_dark" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_horizontal"
        android:layout_marginBottom="@dimen/key_margin_vertical"
        android:src="@drawable/ic_lock_icon"
        app:backgroundTint="@color/car_key_button"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/lock_button_size"
        app:layout_constraintBottom_toTopOf="@+id/lockTitle"
        app:layout_constraintEnd_toStartOf="@+id/btnUnlock"
        app:maxImageSize="@dimen/lock_icon_size"
        app:rippleColor="@color/secondary_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>
